--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+
+{% include base_path %}
+{% If page.header.overlay_color or page.header.overlay_image or page.header.image %}
+  {% include page__hero.html %}
+{% endif %}
+
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
 
